===2016/03/16===
Added short name of poster next to their name
Hover over the poster name will give abbrname
Added x to the message content so that it can be closed
adjusted how the footer Login Date/Time is shown
Added rick roll when you dblclick the hci logo
Added HCI logo to chrome extension

===2015/10/04===
changed the height adjustment for .msgcontent back to -5px from -(45+35) px **

===2015/09/05===
Tried to fix the height issue, but was unsuccessful. The height needs to be $(".cnt").height()-$(".msgheader").height() [Reverted to previous code] **
added special case fallback for attachments if the "attachment" header is wrapped in another font tag **


===2015/09/01===
moved eventlistener additions to initializeMessages()
moved styles for ".avt", ".collection-item.avatar p" to extraCSS
change the var materialCSS from string to array for better legibility
added hci favicon
compiled min js and chrome ext (v3.1.1)

===2015/08/30===
added grabbable and unselectable classes to toasts**
added unselectable to "no new messages"**

===2015/08/29===
fixed marking bug (it was due to sending value of submit button)
added responses
added indeterminate radio button
fixed toasting
fixed height of .msgcontent (added -35px)
fixed unselectable issues (bzg. more_vert, no new messages)
fixed EMB Help unclickable (it was due to posted messagess overlaying on top of it, so there were no pointer events)
added chrome support (with run_at document start)
made the cursor focus on userid on login screen

===LEGEND===
*	Did not recompile chrome extension
**	Did not recompile min.js and chrome extension

[all changes with * and ** will be propogated upon next compile]