@@ -5,11 +5,11 @@
 // @include			http://messages.hci.edu.sg/*
 // @require     	http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js
 // @require			https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js
-// @version     	3.1.3
+// @version     	3.1.4
 // @description	    SMB with a new look, made for browsers that support more than IE
 // ==/UserScript==
 // License: CC BY 4.0 http://creativecommons.org/licenses/by/4.0/
-// Last updated: 16 March 2016
+// Last updated: 10 April 2016
 
 var materialize=!0,retrieving=!1,lastUpdated=null,currPage="",currentMessages=[],currentMessage=!1,selectedMessages=[],windowFocus=!0,globalTImer,defaultColours={nav:"",footer:"",loaderMain:{main:"deep-orange darken-4",accent:"light-blue"},loaderSecondary:{main:"amber",accent:"pink"},background:"#EDE8E4"},defaultSettings={footer:{padding:"20px",margin:"20px",height:"50px"}},colours="undefined"!=typeof localStorage.colours?objectExtend(defaultColours,$.parseJSON(localStorage.colours)):defaultColours,
 settings="undefined"!=typeof localStorage.settings?objectExtend(defaultSettings,$.parseJSON(localStorage.settings)):defaultSettings,link_regex=/(([a-z]+:\/\/)?(([a-z0-9\-]+\.)+([a-z]{2}|aero|arpa|biz|com|coop|edu|gov|info|int|jobs|mil|museum|name|nato|net|org|pro|travel|local|internal))(:[0-9]{1,5})?(\/[a-z0-9_\-\.~]+)*(\/([a-z0-9_\-\.]*)(\?[a-z0-9+_\-\.%=&amp;]*)?)?(#[a-zA-Z0-9!$&'()*+.=-_~:@/?]*)?)(\s+|$)/gi,email_regex=/([-!#-'*+/-9=?A-Z^-~]+(\.[-!#-'*+/-9=?A-Z^-~]+)*|"([]!#-[^-~ \t]|(\\[\t -~]))+")@[0-9A-Za-z]([0-9A-Za-z-]{0,61}[0-9A-Za-z])?(\.[0-9A-Za-z]([0-9A-Za-z-]{0,61}[0-9A-Za-z])?)+/gi;
@@ -58,10 +58,13 @@ c.push(".padding {height: 0px; margin-top: 10px;}");c.push(".attachborder {heigh
 c.push(".attachSize {color: #444; display: block; line-height: 32px; margin-top: 10px; bottom: 10px; position: absolute; width: calc(100% - 20px);}");c.push(".attachSize img {right: 5px; height: 32px; width: 32px; position: absolute;}");c.push(".choicesRadioOption {display: inline-block; padding-right: 10px; padding-bottom: 5px; border-bottom: 1px solid #ccc;}");c.push("footer a:hover {text-decoration: underline; } ");c.push("footer.page-footer {font-weight: 400 !important; padding: "+settings.footer.padding+
 " 0px; margin-top: "+settings.footer.margin+";}");c.push("footer.page-footer .footer-copyright {height: "+settings.footer.height+"; line-height: "+settings.footer.height+";} ");c.push("footer .messagesposted {position: absolute; left: 0px; right: 0px;}");c.push("</style>");$("body").html(a.join(""));$("body").removeAttr("bgcolor");$("body").removeAttr("oncontextmenu");$("head").append(c.join(""));$(".dropdown-button").dropdown();$("#refresh").click(function(a){$(this).hasClass("spin")||($(this).addClass("spin faster"),
 refreshMessages("view",!0))});initializeMessages();$("#search").click(function(a){});globalTimer=setInterval(function(){refreshMessages("view",!1)},12E4)}$("body").fadeIn(1E3,function(){lastUpdated=b.timestamp;$("#loading").fadeOut(500)})}function toggleContentBox(a){a?($(".msgs").removeClass("l12").addClass("l4"),$(".cnt").removeClass("hidden")):($(".msgs").removeClass("l4").addClass("l12"),$(".cnt").addClass("hidden"),currentMessage=!1)}
-function initializeMessages(){$(".avt").off("click");$(".collection-item").off("click");$(".mark").off("click");$(".avt").click(function(a){if($(this).hasClass("selected")){var b=this.dataset.msgid;selectedMessages=selectedMessages.filter(function(a){return a.uid!=b});$(this).removeClass("selected");$(this).closest("li").removeClass("selected");$(this).html(this.dataset.letter)}else{var c=$.parseJSON(he.decode($(this).closest("li")[0].dataset.obj));selectedMessages.push(c);$(this).addClass("selected");
-$(this).closest("li").addClass("selected");$(this).html('<i style="line-height: 42px; transform: rotatey(180deg)" class="material-icons">check</i>')}a.stopPropagation()});$(".collection-item").click(function(a){$(this).hasClass("selected")?console.log("Messaage is selected"):(a=$.parseJSON(he.decode(this.dataset.obj)),currentMessage?currentMessage.uid==a.uid?toggleContentBox(!1):(currentMessage=a,fetchMessage(currentMessage),sscroll("#msg_"+currentMessage.uid)):(currentMessage=a,toggleContentBox(!0),
-fetchMessage(currentMessage),$(".cnt").on("transitionend webkitTransitionEnd oTransitionEnd otransitionend MSTransitionEnd",function(){sscroll("#msg_"+currentMessage.uid)})))});$(".mark").click(function(a){var b=this,c=$(b).hasClass("activated");$(b).hasClass("asyncError")&&$(b).removeClass("asyncError");$(b).html("filter_tilt_shift");$(b).addClass("spin");$.ajax({url:"/cgi-bin/emb/choice.pl?view.pl?date??",method:"POST",data:{msgid:b.dataset.msgid,attn:c?"B":"A"}}).done(function(a,g,d){$(b).removeClass("spin");
-c?($(b).html("star_border"),$(b).removeClass("activated")):($(b).html("star"),$(b).addClass("activated"));a=$.parseJSON(he.decode($("#msg_"+b.dataset.msgid).dataset.obj));a.marked=!a.marked;$("#msg_"+b.dataset.msgid).dataset.obj=he.encode(JSON.stringify(msgobj),{useNamedReferences:!0})}).fail(function(a,c,d){$(b).removeClass("spin");$(b).html("warning");$(b).addClass("asyncError")}).always(function(){});a.stopPropagation()})}
+function initializeMessages(){$(".avt").off("click");$(".collection-item").off("click");$(".mark").off("click");$(".avt").click(function(a){if($(this).hasClass("selected")){var b=this.dataset.msgid;selectedMessages=selectedMessages.filter(function(a){return a.uid!=b});console.log("Selected Messages",selectedMessages);$(this).removeClass("selected");$(this).closest("li").removeClass("selected");$(this).html(this.dataset.letter)}else{var c=$.parseJSON($(this).closest("li")[0].dataset.obj);selectedMessages.push(c);
+console.log("Selected Messages",selectedMessages);$(this).addClass("selected");$(this).closest("li").addClass("selected");$(this).html('<i style="line-height: 42px; transform: rotatey(180deg)" class="material-icons">check</i>')}a.stopPropagation()});$(window).keypress(function(a){a.shiftKey&&a.ctrlKey&&a.altKey&&"X"==a.key&&(handelnNachrichten("MarkAllAsRead"),a.preventDefault(),a.stopPropagation())});$(".collection-item").click(function(a){$(this).hasClass("selected")?console.log("Messaage is selected"):
+(a=$.parseJSON(this.dataset.obj),currentMessage?currentMessage.uid==a.uid?toggleContentBox(!1):(currentMessage=a,fetchMessage(currentMessage),sscroll("#msg_"+currentMessage.uid)):(currentMessage=a,toggleContentBox(!0),fetchMessage(currentMessage),$(".cnt").on("transitionend webkitTransitionEnd oTransitionEnd otransitionend MSTransitionEnd",function(){sscroll("#msg_"+currentMessage.uid)})))});$(".mark").click(function(a){var b=this,c=$(b).hasClass("activated");$(b).hasClass("asyncError")&&$(b).removeClass("asyncError");
+$(b).html("filter_tilt_shift");$(b).addClass("spin");$.ajax({url:"/cgi-bin/emb/choice.pl?view.pl?date??",method:"POST",data:{msgid:b.dataset.msgid,attn:c?"B":"A"}}).done(function(a,g,d){$(b).removeClass("spin");c?($(b).html("star_border"),$(b).removeClass("activated")):($(b).html("star"),$(b).addClass("activated"));a=$.parseJSON($("#msg_"+b.dataset.msgid)[0].dataset.obj);a.marked=!a.marked;$("#msg_"+b.dataset.msgid).dataset.obj=he.encode(JSON.stringify(msgobj),{useNamedReferences:!0})}).fail(function(a,
+c,d){$(b).removeClass("spin");$(b).html("warning");$(b).addClass("asyncError")}).always(function(){});a.stopPropagation()})}
+function handelnNachrichten(a){if("MarkAllAsRead"==a){var b=0,c=0,e=[];$.each(selectedMessages,function(a,d){console.log("Reading",d.title);e.push($.ajax({url:d.href,dataType:"html",method:"GET",async:!0,success:function(a,e,g){a=$("<html />").html(a);e=!1;(e=/No such file or directory\)/gi.test(a.find("body").text()))?(c++,console.error("No such file or directory while retreiving ["+d.title+"]"),toast("Error while trying to read messages. See Web Console (F12) for more information.")):(console.info("Read",
+d.title),d.read||(d.read=!0,$("#msg_"+d.uid+" .title").removeClass("unread"),$("#msg_"+d.uid).attr("data-obj",he.encode(JSON.stringify(d),{useNamedReferences:!0})),b++))},error:function(a,b,c){err("Error: "+c)}}))});$.when.apply($,e).done(function(){}).fail(function(){}).always(function(){console.log(b,c);toast(b+" Message"+(1!=b?"s":"")+" Read!"+(0<c?" "+c+" Error"+(1<c?"s":"")+" encountered.":""))})}}
 function init(){var a=getPage(),b=a.split(" ")[1],a=a.split(" ")[0],c=/\/(attach)\//.test(window.location.toString())||/\.(png|jpe?g|gif|tiff?)/gi.test(window.location.toString());if("/"==window.location.pathname)addMaterial(),startRoot();else switch(a){case "embmenu.pl":$("html").html("<head></head><body></body>");addMaterial();startMain(0);break;case "smbmenu.pl":addMaterial();startMenu(0);break;case "embview_archive.pl":addMaterial();startArchive();break;case "embview.pl":$("html").html("<head></head><body></body>");
 addMaterial();startMain(1);break;case "smblogin.pl":addMaterial();startError();break;case "emblogin.pl":addMaterial();startError();break;case "smbmenu_util.pl":addMaterial();startUtil(1);break;case "embutil.pl":addMaterial();startUtil(0);break;default:"smb"==b||"emb"==b?c?materialize=!1:b==a?(materialize=!1,"/emb/"==window.location.pathname&&(window.location.href="/")):(addMaterial(),startLogin()):materialize=!1}}
 function addMaterial(){var a=[];a.push('<link type="image/x-icon" href="http://www.hci.edu.sg/favicon.ico" rel="icon">');a.push('<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">');a.push('<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">');a.push("<style>");a.push("@media only screen and (max-width:1366px) { html{zoom: 90%;} } ");a.push(".unselectable{-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;} ");
@@ -75,8 +78,8 @@ d.push(h);if(g.length){d.push("<div class='attachborder'></div>");d.push('<h5 cl
 d.push("</a>")}d.push("</div>")}else d.push("<div class='padding'></div>");if(b){d.push("<div class='attachborder'></div>");d.push('<div class="row">');d.push('<form id="choiceForm" class="col s8">');for(h=0;5>h;h++)b=String.fromCharCode(65+h),d.push('<div class="choicesRadioOption">'),d.push('<input name="choice" type="radio" id="choice_'+b+'" value="'+b+'" '+(e.choice==b?"checked":"")+"/>"),d.push('<label for="choice_'+b+'">'+b+"</label>"),d.push("</div>");d.push('<div class="choicesRadioOption">');
 d.push('<input name="choice" type="radio" id="choice_indeterminate" value="0" '+(e.choice?"":"checked")+"/>");d.push('<label for="choice_indeterminate">No Choice</label>');d.push("</div>");d.push('<div class="input-field">');d.push('<textarea id="remark" name="remark" class="materialize-textarea">'+e.remark+"</textarea>");d.push('<label for="textarea1" class="unselectable defaultCursor noPointerEvents">Response Box</label>');d.push("</div>");d.push('<button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>');
 d.push("</form>");d.push("</div>")}d.push("</div>");d.push("</div>");a.read||(a.read=!0,$("#msg_"+a.uid+" .title").removeClass("unread"),$("#msg_"+a.uid).attr("data-obj",he.encode(JSON.stringify(a),{useNamedReferences:!0})));$(".cnt").html(c.join("")+d.join(""));$(".row.hidden").removeClass("hidden");$(".attachTitle").dotdotdot({ellipsis:"... ",wrap:"word",fallbackToLetter:!0,after:null,watch:!1,height:null,tolerance:0,callback:function(a,b){},lastCharacter:{remove:" ,;.!?".split(""),noEllipsis:[]}});
-$(".closeMessage").off("click");$(".closeMessage").click(function(a){console.log("Close button clicked");toggleContentBox(!1)});$("#choiceForm").on("submit",function(b){for(var c=$.parseJSON(he.decode($("#msg_"+a.uid).attr("data-obj"))).marked?"A":"B",d=$(this).serialize().split("&"),c={msgid:a.uid,attn:c},g=0,h=d.length;g<h;g++){var l=d[g].split("=");c[l[0]]=l[1]}c.choice||(e.choice?c.choice="":delete c.choice);$.ajax({url:"/cgi-bin/emb/choice.pl?view.pl?date??",method:"POST",data:c}).done(function(a,
-b,c){toast("Response Submitted!")}).fail(function(a,b,c){err("Error Occured! ("+c+")")}).always(function(){});console.log(c);b.stopPropagation();b.preventDefault()});$("#msgloader").remove()}}).fail(function(a,c,e){err("Error: "+e)}).always(function(){});retrieving=!1}
+$(".closeMessage").off("click");$(".closeMessage").click(function(a){console.log("Close button clicked");toggleContentBox(!1)});$("#choiceForm").on("submit",function(b){for(var c=$.parseJSON($("#msg_"+a.uid).attr("data-obj")).marked?"A":"B",d=$(this).serialize().split("&"),c={msgid:a.uid,attn:c},g=0,h=d.length;g<h;g++){var l=d[g].split("=");c[l[0]]=l[1]}c.choice||(e.choice?c.choice="":delete c.choice);$.ajax({url:"/cgi-bin/emb/choice.pl?view.pl?date??",method:"POST",data:c}).done(function(a,b,c){toast("Response Submitted!")}).fail(function(a,
+b,c){err("Error Occured! ("+c+")")}).always(function(){});console.log(c);b.stopPropagation();b.preventDefault()});$("#msgloader").remove()}}).fail(function(a,c,e){err("Error: "+e)}).always(function(){});retrieving=!1}
 function retImg(a){var b="";if("firefox"==browsername())return"moz-icon://."+a+"?size=32";b="//ssl.gstatic.com/docs/doclist/images/mediatype/icon_1_";b=/pdf/gi.test(a)?b+"pdf":/doc/gi.test(a)?b+"word":/xls/gi.test(a)?b+"excel":/(jpe?g|tif+|gif|bmp|png)/gi.test(a)?b+"image":/ppt/gi.test(a)?b+"powerpoint":/(zip|rar|7z)/gi.test(a)?b+"archive":/(mp3|wa?v|m4a|aif+|aac|og(g|a)|wma|vox)/.test(a)?b+"audio":/(mp4|mpe?g|m4v|webm|mkv|flv|vob|ogv|avi|mov|wmv)/.test(a)?b+"video":b+"generic";return b+"_x32.png"}
 function browsername(){var a=!!window.opera||0<=navigator.userAgent.indexOf(" OPR/"),b="undefined"!==typeof InstallTrigger,c=0<Object.prototype.toString.call(window.HTMLElement).indexOf("Constructor");if(a)return"opera";if(b)return"firefox";if(c)return"safari";if(window.chrome&&!a)return"chrome";if(document.documentMode)return"ie"}
 function refreshMessages(a,b,c){if(!retrieving){var e=$.extend({date:!1},c);c=getMessages(a,e).delta;if(b){if("view"==a){b=sortMessages(c);if(0<c.length){for(var g in b)if(b.hasOwnProperty(g)){for(var d=[],h=b[g],l=0,w=h.length;l<w;l++){var z=h[l];d.push(printMessage(g,z,!0))}$("#"+g).prepend(d.join(""))}initializeMessages();$(".queuing.msg_imptUnread").length+$(".queuing.msg_impt").length&&$(".impt.nonewmessages").length&&$(".impt.nonewmessages").css("height","0px").remove();$(".queuing.msg_normalUnread").length+
